--- a/index.html
+++ b/index.html
@@ -65,63 +65,53 @@
         <div class="service-top">
           <h1 class="section-title">Serv<span>i</span>ces</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
-            deleniti maiores pariatur assumenda quas magni et, doloribus quod
-            voluptate quasi molestiae magnam officiis dolorum, dolor provident
-            atque molestias voluptatum explicabo!
+            I offer a range of services to help bring ideas to life, even at a
+            beginner level. With a strong foundation in coding, problem-solving,
+            and design, I am continuously improving my skills to deliver quality
+            work. Whether it's web development, basic programming, or creative
+            solutions, I strive to provide reliable and effective results. My
+            goal is to learn, grow, and contribute to meaningful projects while
+            ensuring client satisfaction.!
           </p>
         </div>
         <div class="service-bottom">
           <div class="service-item">
             <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              <img src="assets\icons\font.gif" />
             </div>
             <h2>Web Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
+              Building simple and responsive websites using HTML, CSS, and
+              JavaScript adding more to it Nodejs,React,MongoDB,express are also
+              part of my work
             </p>
           </div>
           <div class="service-item">
             <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              <img src="assets\icons\web-developer.gif" />
             </div>
-            <h2>Web Design</h2>
+            <h2>Programming Solutions / Information Security</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
+              – Writing and debugging code in languages like C++, C and Java.
             </p>
           </div>
           <div class="service-item">
             <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              <img src="assets\icons\responsive.gif" />
             </div>
-            <h2>Web Design</h2>
+            <h2>Basic UI/UX Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
+              Creating user-friendly designs with a focus on aesthetics and
+              functionality.normally using figma
             </p>
           </div>
           <div class="service-item">
             <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              <img src="assets\icons\file.gif" />
             </div>
-            <h2>Web Design</h2>
+            <h2>DevOps / Computer Networking</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
+              Exploring automation, security practices, and network management.
             </p>
           </div>
         </div>
@@ -139,13 +129,15 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 1</h1>
-              <h2>Coding is Love</h2>
+              <h2>Console-based Chess game</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                iusto cupiditate voluptatum impedit unde rem ipsa distinctio
-                illum quae mollitia ut, accusantium eius odio ducimus illo neque
-                atque libero non sunt harum? Ipsum repellat animi, fugit
-                architecto voluptatum odit et!
+                A console-based Chess game implemented in C++ using
+                Object-Oriented Programming (OOP) principles. Each piece is
+                represented as a class, following encapsulation, inheritance,
+                and polymorphism. The game includes basic move validation,
+                turn-based logic, and checkmate detection. This project helped
+                me strengthen my OOP design skills and game logic
+                implementation.
               </p>
             </div>
             <div class="project-img">
@@ -155,65 +147,68 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 2</h1>
-              <h2>Coding is Love</h2>
+              <h2>DSA-Based Maze Solver with Data Storage</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                iusto cupiditate voluptatum impedit unde rem ipsa distinctio
-                illum quae mollitia ut, accusantium eius odio ducimus illo neque
-                atque libero non sunt harum? Ipsum repellat animi, fugit
-                architecto voluptatum odit et!
+                A maze-solving algorithm implemented using Breadth-First Search
+                (BFS) and Depth-First Search (DFS) in Python (or C++). The
+                program reads a maze from a file or user input, finds the
+                shortest path, and stores solved paths in a **database (SQLite
+                or JSON format!
               </p>
             </div>
             <div class="project-img">
-              <img src="./assets/images/img-1.png" alt="img" />
+              <img src="./assets/images/new.jpg" alt="img" />
             </div>
           </div>
           <div class="project-item">
             <div class="project-info">
               <h1>Project 3</h1>
-              <h2>Coding is Love</h2>
+              <h2>
+                Blog-Creating Application with React.js, Node.js, and MongoDB
+              </h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                iusto cupiditate voluptatum impedit unde rem ipsa distinctio
-                illum quae mollitia ut, accusantium eius odio ducimus illo neque
-                atque libero non sunt harum? Ipsum repellat animi, fugit
-                architecto voluptatum odit et!
+                This full-stack blog app uses React.js for the frontend, Node.js
+                with Express.js for the backend, and MongoDB for data storage.
+                It features user authentication, CRUD operations for blog posts,
+                image uploads with Multer, and a responsive UI with Material-UI.
+                The project strengthened my skills in full-stack development and
+                building RESTful APIs!
               </p>
             </div>
             <div class="project-img">
-              <img src="./assets/images/img-1.png" alt="img" />
+              <img src="./assets/images/blog.jpg" alt="img" />
             </div>
           </div>
           <div class="project-item">
             <div class="project-info">
               <h1>Project 4</h1>
-              <h2>Coding is Love</h2>
+              <h2>Phishing Awareness Tool</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                iusto cupiditate voluptatum impedit unde rem ipsa distinctio
-                illum quae mollitia ut, accusantium eius odio ducimus illo neque
-                atque libero non sunt harum? Ipsum repellat animi, fugit
-                architecto voluptatum odit et!
+                A beginner-friendly Information Security project that simulates
+                phishing attacks to educate users on cybersecurity threats.
+                Built using Python this tool detect fake login pages and tracks
+                user interactions (without storing sensitive data). It helped me
+                understand social engineering tactics, security awareness, and
+                ethical hacking principles.
               </p>
             </div>
             <div class="project-img">
-              <img src="./assets/images/img-1.png" alt="img" />
+              <img src="./assets/images/phising .jpg" alt="img" />
             </div>
           </div>
           <div class="project-item">
             <div class="project-info">
               <h1>Project 5</h1>
-              <h2>Coding is Love</h2>
+              <h2>Basic Network Simulation</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                iusto cupiditate voluptatum impedit unde rem ipsa distinctio
-                illum quae mollitia ut, accusantium eius odio ducimus illo neque
-                atque libero non sunt harum? Ipsum repellat animi, fugit
-                architecto voluptatum odit et!
+                Using Cisco Packet Tracer, I designed a small computer network
+                with routers, switches, and PCs. This project strengthened my
+                understanding of network topologies, IP addressing, and device
+                configuration.!
               </p>
             </div>
             <div class="project-img">
-              <img src="./assets/images/img-1.png" alt="img" />
+              <img src="./assets/images/cn.jpg" alt="img" />
             </div>
           </div>
         </div>
@@ -231,17 +226,19 @@
         </div>
         <div class="col-right">
           <h1 class="section-title">About <span>me</span></h1>
-          <h2>Front End Developer</h2>
+          <h2>From Code to Cloud: My Journey</h2>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Asperiores, velit alias eius non illum beatae atque repellat ratione
-            qui veritatis repudiandae adipisci maiores. At inventore
-            necessitatibus deserunt exercitationem cumque earum omnis ipsum rem
-            accusantium quis, quas quia, accusamus provident suscipit magni!
-            Expedita sint ad dolore, commodi labore nihil velit earum ducimus
-            nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!
+            Myself sibghatullah, an aspiring tech professional stepping into the
+            world of development, security, and networking. With a foundation in
+            programming and web development, I'm expanding my skills in DevOps,
+            Information Security, and Computer Networking. I enjoy solving
+            problems, learning new technologies, and building practical
+            solutions. This portfolio reflects my journey as I grow and
+            contribute to the tech industry.
           </p>
-          <a href="Portfolio-main\assets\my-cv.pdf" download class="cta">Download Resume</a>
+          <a href="SIBGHAT_PORT\Sibghatullah resume.pdf" download class="cta"
+            >Download Resume</a
+          >
         </div>
       </div>
     </section>
@@ -261,7 +258,6 @@
             <div class="contact-info">
               <h1>Phone</h1>
               <h2>+92 333 8665786</h2>
-              <h2>+1 234 123 1234</h2>
             </div>
           </div>
           <div class="contact-item">
@@ -273,7 +269,6 @@
             <div class="contact-info">
               <h1>Email</h1>
               <h2>sibghatullah1a2a3a@gmail.com</h2>
-              <h2>info@gmail.com</h2>
             </div>
           </div>
           <div class="contact-item">
