--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             solutions. This portfolio reflects my journey as I grow and
             contribute to the tech industry.
           </p>
-          <a href="SIBGHATULLAH_Resume (3).pdf" download class="cta"
+          <a href="SIBGHATULLAH_BSIT_resume.pdf" download class="cta"
             >Download Resume</a
           >
         </div>
