Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <div style="font-weight:800;color:var(--accent)">Beginner → Building fast</div>
                 <div style="color:var(--muted);font-size:0.9rem">BSIT • DevOps learner • InfoSec curious</div>
               </div>
-              <div class="chip">Open to internships</div>
+              <div class="chip">Open to Projects</div>
             </div>
 
             <div class="skills">
@@ -493,7 +493,7 @@ $ motto
       <img src="./assets/icons/font.gif" alt="design" style="transform:translateX(-1px) rotate(-2deg)" />
     </div>
 
-    <div class="sparkle">Open for internships ✨</div>
+    <div class="sparkle">Open for Projects ✨</div>
 
     <!-- Chat demo (hidden until opened) -->
     <div id="chatDemo" class="chat-demo" style="display:none;" aria-hidden="true">
@@ -537,3 +537,4 @@ $ motto
     </script>
   </body>
 </html>
+
